# gage

ledger-app/: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
ledger-app/backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev
ledger-app/backend/migrations/: 202604240001_init.sql  202604240002_sessions.sql  202604240003_category_rules.sql  202604240004_normalize_card_names.sql  202604240005_kream_ledger.sql  202604270001_kream_common_side_costs.sql  202604270002_kream_open_sales_and_rules.sql  202604270003_card_benefit_applications.sql  202604270004_seed_card_presets.sql
ledger-app/backend/src/: config.rs  db.rs  errors.rs  main.rs
ledger-app/backend/src/auth/: extractor.rs
ledger-app/backend/src/card_rules/: mod.rs
ledger-app/backend/src/import/: dedupe.rs  hyundai_card.rs  mod.rs  parser.rs  pasted_text.rs  samsung_card.rs  shinhan_bank.rs  shinhan_card.rs  watcher.rs
ledger-app/backend/src/models/: mod.rs
ledger-app/backend/src/routes/: accounts.rs  asset_snapshots.rs  auth.rs  card_presets.rs  cards.rs  categories.rs  category_rules.rs  dashboard.rs  export.rs  imports.rs  kream.rs  mod.rs  telegram.rs  transactions.rs
ledger-app/backend/src/services/: auto_categorize.rs  kream_rules.rs  mod.rs  seed.rs  transaction_scope.rs
ledger-app/backend/src/telegram/: commands.rs  mod.rs  parser.rs  webhook.rs
ledger-app/frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ledger-app/frontend/src/: App.tsx  (+1 more)
(+23 files in other folders)
