[package]
name = "ledger-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart", "macros"] }
axum-extra = { version = "0.10", features = ["cookie-private", "typed-header"] }
calamine = "0.31"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
dotenvy = "0.15"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
time = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
pretty_assertions = "1"
